redefine config and setup, remove lots of unnecessary

--- a/compare/index.html
+++ b/compare/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BackstopJS Report</title>
+  <title>ImageDiffTesterJS Report</title>
 
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -16,7 +16,7 @@
 
 <body ng-app="compareApp">
   <div id="root" ng-controller="MainCtrl">
-    <div class="container"><h1>BackstopJS Report</h1></div>
+    <div class="container"><h1>ImageDiffTesterJS Report</h1></div>
     <div class="container summaryBlock">
       <h2 class='lead'>
         <div class="stat">Passed <strong class='green circle'>{{passedCount}}</strong>&nbsp;&nbsp; Failed <strong class='red circle'>{{testPairsCompleted-passedCount}}</strong></div>
