--- a/compare/index.html
+++ b/compare/index.html
@@ -16,15 +16,26 @@
 
 <body ng-app="compareApp">
   <div id="root" ng-controller="MainCtrl">
-    <div class="container"><h1>ImageDiffTesterJS Report</h1></div>
+    <div class="container">
+      <h1>ImageDiffTesterJS Report</h1>
+    </div>
     <div class="container summaryBlock">
-      <h2 class='lead'>
-        <div class="stat">Passed <strong class='green circle'>{{passedCount}}</strong>&nbsp;&nbsp; Failed <strong class='red circle'>{{testPairsCompleted-passedCount}}</strong></div>
+      <h2 class="lead">
+        <div class="stat">
+          <span>Passed</span><strong class="green circle">{{passedCount}}</strong> 
+          <span>Failed</span><strong class="red circle">{{testPairsCompleted-passedCount}}</strong>
+        </div>
         <div class="stat">{{testPairsCompleted}} of {{testPairs.length}}</div>
         <div class="stat">{{testDuration/1000 | number : 2}}s</div>
         <div class="progressBarBlock" ng-if="testIsRunning">
           <div class="progress">
-            <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="{{testPairsCompleted}}" aria-valuemin="0" aria-valuemax="{{testPairs.length}}" style="width: {{testPairsCompleted/testPairs.length*100| number : 0}}%">
+            <div 
+              class="progress-bar progress-bar-striped active" 
+              role="progressbar" 
+              aria-valuenow="{{testPairsCompleted}}" 
+              aria-valuemin="0" 
+              aria-valuemax="{{testPairs.length}}" 
+              style="width: {{testPairsCompleted/testPairs.length*100| number : 0}}%">
               <span class="sr-only">{{testPairsCompleted}} of {{testPairs.length}}</span>
             </div>
           </div>
@@ -33,23 +44,38 @@
       <table class="summaryList">
         <tr ng-repeat="thisTestPair in testPairs">
           <td class="statusInds">
-            <div class="indicator scanning" ng-if="thisTestPair.processing"><span class="dot yellow flash"></span>scanning</div>
-            <div class="indicator failed" ng-if="!thisTestPair.passed&&!thisTestPair.processing"><span class="dot red"></span>failed</div>
-            <div class="indicator passed" ng-if="thisTestPair.passed"><span class="dot green"></span>passed</div>
+            <div class="indicator scanning" ng-if="thisTestPair.processing">
+              <span class="dot yellow flash"></span>
+              <span>scanning</span>
+            </div>
+            <div class="indicator failed" ng-if="!thisTestPair.passed&&!thisTestPair.processing">
+              <span class="dot red"></span>
+              <span>failed</span>
+            </div>
+            <div class="indicator passed" ng-if="thisTestPair.passed">
+              <span class="dot green"></span>
+              <span>passed</span>
+            </div>
           </td>
           <td>
-            {{ thisTestPair.meta.label }} {{ thisTestPair.meta.selector }} <span class="fileName">{{ thisTestPair.meta.fileName }}</span>
+            {{ thisTestPair.meta.label }} {{ thisTestPair.meta.selector }} 
+            <span class="fileName">{{ thisTestPair.meta.fileName }}</span>
           </td>
         </tr>
       </table>
-    </div> <!-- end summaryBlock -->
+    </div>
+    <!-- end summaryBlock -->
 
     <div class="detailReport">
 
-      <div class='filterGroup form-group'>
+      <div class="filterGroup form-group">
         <label for="statusFilter" class="control-label">status filter</label>
-        <select id="statusFilter" class="form-control" ng-model="statusFilter" ng-options="status for status in detailFilterOptions"></select>
-
+        <select 
+          id="statusFilter" 
+          class="form-control" 
+          ng-model="statusFilter" 
+          ng-options="status for status in detailFilterOptions">
+        </select>
       </div>
 
       <div class="results" ng-repeat="thisTestPair in testPairs | filter : displayOnStatusFilter">
@@ -58,10 +84,10 @@
             <div class="filename">{{ thisTestPair.meta.fileName }}</div>
         </div>
         <div class="flex-container">
-            <div>Reference</div>
-            <div>Test</div>
-            <div>Diff</div>
-            <div>Report</div>
+          <div>Reference</div>
+          <div>Test</div>
+          <div>Diff</div>
+          <div>Report</div>
         </div>
         <div class="flex-container">
           <div>
@@ -75,9 +101,18 @@
           </div>
           <div>
             <div class="statusInds">
-              <div class="indicator scanning" ng-if="thisTestPair.processing"><span class="dot yellow flash"></span>scanning</div>
-              <div class="indicator failed" ng-if="!thisTestPair.passed&&!thisTestPair.processing"><span class="dot red"></span>failed</div>
-              <div class="indicator passed" ng-if="thisTestPair.passed"><span class="dot green"></span>passed</div>
+              <div class="indicator scanning" ng-if="thisTestPair.processing">
+                <span class="dot yellow flash"></span>
+                <span>scanning</span>
+              </div>
+              <div class="indicator failed" ng-if="!thisTestPair.passed&&!thisTestPair.processing">
+                <span class="dot red"></span>
+                <span>failed</span>
+              </div>
+              <div class="indicator passed" ng-if="thisTestPair.passed">
+                <span class="dot green"></span>
+                <span>passed</span>
+              </div>
             </div>
             <div class="reportTxt">Threshold: {{ thisTestPair.meta.misMatchThreshold}}</div>
             <div class="reportTxt">Report: {{ thisTestPair.report }}</div>
